fixed overflow on mobile devices

--- a/style.css
+++ b/style.css
@@ -32,10 +32,11 @@ body{
     margin:0;
     padding: 0;
 }
-.pageWrapper{
-  display:inline;
-  overflow-x: hidden;
+html, body {
+  position:relative;
+  overflow-x:hidden;
 }
+
 .wrapper {
   background: url("https://wallpapercave.com/wp/SIkIzca.jpg");
   color: #eee;
@@ -157,20 +158,15 @@ span{
     width: 80%;
     margin: auto;
 }
-#banner{
 
-
-}
 .bannerS1{
     width: 70%;
-    margin: auto;
-    
+    margin: auto;   
     color: var(--white);
     position: absolute;
-    top: 100px;
-    
-    
+    top: 100px;  
 }
+
 canvas {
   position:absolute;
   left:0;
